bug: fix gooogle button lack of responsiveness and ldark mode not assuming full page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,3 @@
-/* Light Mode */
-/* ============================== */
-
-.app_container_dark{
-  background: var(--color-dark-mode);
-  color: #fff;
-}
-
-
 /* Layout */
 /* ============================== */
 
@@ -148,4 +139,18 @@
   margin: 40px auto;
   border-radius: 50%;
   background:#fff;
+}
+
+
+/* Light Mode */
+/* ============================== */
+
+.app_container_dark{
+  background: var(--color-dark-mode);
+  color: #fff;
+  min-height: 100vh;
+}
+
+.app_container_light{
+  min-height: 100vh;
 }
