--- a/client/src/screens/HeaderRoutes/UserRoutes/signin.module.css
+++ b/client/src/screens/HeaderRoutes/UserRoutes/signin.module.css
@@ -55,7 +55,6 @@
 }
 
 .form_buttons a:last-child button{
-    margin-bottom: 1rem;
     transition: ease-in-out .5s;
     background-color: #3ba1da;
     color: #fff;
@@ -82,6 +81,7 @@
 @media screen and (min-width: 300px){
     .form_buttons{
         flex-direction: row;
+        margin-bottom: 1rem;
     }
 
     .form_buttons a{
@@ -93,17 +93,21 @@
 .google{
     display: flex;
     flex-direction: column;
-    justify-content: center; 
 }
 
 .google > div{
     width: 100%;
-    max-width: 13.5rem;
 }
 
 @media screen and (min-width: 300px){
     .google{
         flex-direction: row;
+        justify-content: center; 
+    }
+
+    .google > div{
+        width: 100%;
+        max-width: 13.5rem;
     }
 }
 
@@ -111,4 +115,12 @@
     color: var(--color-dark-grey);
     font-size: 0.9375rem;
     text-align: center;
+}
+
+
+/* light mode */
+
+.signin_light .form label,
+.signin_light .forgot_passowrd{
+    color: #fff;
 }
