--- a/client/src/screens/HeaderRoutes/UserRoutes/signup.module.css
+++ b/client/src/screens/HeaderRoutes/UserRoutes/signup.module.css
@@ -55,7 +55,6 @@
 }
 
 .form_buttons a:first-child button{
-    margin-bottom: 1rem;
     transition: ease-in-out .5s;
     background-color: #3ba1da;
     color: #fff;
@@ -82,6 +81,7 @@
 @media screen and (min-width: 300px){
     .form_buttons{
         flex-direction: row;
+        margin-bottom: 1rem;
     }
 
     .form_buttons a{
@@ -105,4 +105,9 @@
     .google{
         flex-direction: row;
     }
+}
+
+.signup_light .form label,
+.signup_light .forgot_passowrd{
+    color: #fff;
 }
